--- a/Project_I.Web/appsettings.json
+++ b/Project_I.Web/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AWS": {
+    "Region": "ap-south-1",
+    "UserPoolClientId": "2n98qbhtab3irpbhdenq9r9l6n",
+    "UserPoolClientSecret": "16p0b6pl6gnf1j4ifbksi74id4e0of3qk3dknntps1gcrdu9qgdn",
+    "UserPoolId": "ap-south-1_iYmQ9zRUB"
+  }
+
 }
